fix layout issues on firefox

--- a/themes/default/static/css/main.less
+++ b/themes/default/static/css/main.less
@@ -281,6 +281,7 @@ a, a:hover, a:active {
 
 
 
+
 // WAITING/LOADING
 // ********************************************************************* //
 
@@ -320,9 +321,6 @@ a, a:hover, a:active {
   top: 0;
   z-index: 1001;
 }
-
-
-
 
 
 
@@ -425,6 +423,8 @@ a, a:hover, a:active {
 #home {
     @media screen and (min-width: @screen-sm-min) { margin-top: -20px; }
     margin-bottom: -60px;
+
+    // banner
     #highlight {
       max-height: 700px;
       overflow: hidden;
@@ -485,20 +485,9 @@ a, a:hover, a:active {
           }
         }
       }
-      /*.nav-left, .nav-right {
-          color: white;
-          font-size: 144px;
-          position: absolute;
-          top: 30%;
-          z-index: 10;
-      }
-      .nav-left {
-          left: 20px;
-      }
-      .nav-right {
-          right: 20px;
-      }*/
-    }
+    } // #hightlight
+
+    // page title
     header {
       border-bottom: 1px solid @gray-lighter;
       margin-bottom: 36px;
@@ -519,7 +508,9 @@ a, a:hover, a:active {
           font-size: 3vw;
         }
       }
-    }
+    } //.page-title
+
+    // repeatable blocks from home
     .block {
       margin-bottom: 40px;
       @media (min-width: 380px) and (max-width: @screen-xs-max) {  
@@ -527,7 +518,9 @@ a, a:hover, a:active {
         margin: 0 auto 40px; 
         width: 360px;
       }        
-    }
+    } // .block
+
+    // courses section
     #courses {
       .course {
         .img {
@@ -550,7 +543,9 @@ a, a:hover, a:active {
           }
         }
       }
-    }
+    } // #courses
+
+    // how it works
     #how-it-works {
         background-color: @gray-lighter;
         color: @gray;
@@ -583,12 +578,11 @@ a, a:hover, a:active {
             }
           }
         }
-    }
+    } // #how-it-works
 }
 
 // COURSES BOXES FROM HOME AND COURSES PAGE
 // ********************************************************************* //
-
 #courses {
     margin-bottom: 40px;
     margin-top: 40px;
@@ -596,9 +590,9 @@ a, a:hover, a:active {
       margin-bottom: 40px;
       overflow: hidden;
       position: relative;
-        .course-link {
+        .course-link { // link wrapper
           display: block;
-          position: relative;
+          position: relative; 
           cursor: pointer;
           &:hover {
             .mouseover {
@@ -617,8 +611,8 @@ a, a:hover, a:active {
               background-color: @brand-info;
             }
           }
-        }
-        .img {
+        } // .course-link
+        .thumb-wrapper { // course thumbnail
           position: relative;
           width: 100%;
           @media (min-width: 540px) and (max-width: @screen-xs-max) {
@@ -631,21 +625,23 @@ a, a:hover, a:active {
           }
           .mouseover {
             background-color: @brand-info;
+            display: block;
+            height: 195px;
             .opacity(0);
             position: absolute;
             .transition(all 0.25s ease);
             width: 100%;
             z-index: 1;
           }
-          span {
+          .thumb { 
             background-size: cover;
             background-position: top center;
             display: block;
             height: 195px;
-            .transition(all 0.25s ease);
-          }
-        }
-        .info-box {
+            width: 100%;
+          } 
+        } // .thumb-wrapper
+        .info-box { // info wrapper for courses page
           position: relative;
           width: 100%;
            @media (min-width: 540px) and (max-width: @screen-xs-max) {
@@ -656,8 +652,8 @@ a, a:hover, a:active {
             float: left;
             width: 60%;
           }
-        }
-        .info {
+        } // .info-box
+        .info { // course info
             background-color: @gray-lighter;
             height: 153px;
             overflow: hidden;
@@ -693,8 +689,8 @@ a, a:hover, a:active {
                 position: relative;
                 overflow: hidden;
             }
-        }
-        .enroll {
+        } // .info
+        .enroll { // go to course link
             width: 100%;
             background-color: @brand-success;
             color: #fff;
@@ -712,8 +708,8 @@ a, a:hover, a:active {
             .fa {
                 margin: 0 9px;
             }
-        }
-    }
+        } // .enroll
+    } // .course
 }
 
 // COURSES PAGE
